force-app/main/default/objects/Invoice__c/Invoice__c.object-meta.xml
<CustomObject>
    <description>The Invoice object stores detailed billing information related to property transactions, agent services, or client payments. It captures key data such as invoice number, billing date, due date, amount, payment status, and the associated property or client. This object is essential for financial tracking, auditing, and integration with accounting systems.</description>
    <label>Invoice</label>
    <nameField>
        <displayFormat>INV# {00000}</displayFormat>
        <label>Invoice #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>