force-app/main/default/objects/Invoice__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <description>Identifies the customer (Account) associated with this record. This relationship links the child record to the customer’s account, enabling consolidated tracking of all related activities, transactions, or properties under a single customer profile.</description>
    <inlineHelpText>Select the customer account this record belongs to. This links the record to the correct client and allows for better visibility and reporting across all customer-related data.</inlineHelpText>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Related Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>