force-app/main/default/objects/Invoice__c/fields/Invoice_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date_Time__c</fullName>
    <description>Records the exact date and time when the invoice was generated or issued. This timestamp is critical for tracking billing cycles, payment deadlines, and maintaining accurate financial records.</description>
    <inlineHelpText>Enter the date and time the invoice was created or sent to the client. This helps determine due dates and manage payment timelines.</inlineHelpText>
    <label>Invoice Date/Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>