force-app/main/default/objects/Invoice__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <description>Represents the total monetary value associated with this record. This may include the sum of all related invoices, property costs, fees, or any financial transactions linked to the account or property.</description>
    <inlineHelpText>Enter or display the total amount related to this record. Ensure it reflects the combined value of all relevant charges or transactions.</inlineHelpText>
    <label>Total Amount</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>